<resources>
    
    <!-- Strings related to login -->
    <string name="prompt_phone">Your phone</string>
    <string name="send_phone">Find</string>
    <string name="prompt_code">Code from sms</string>
    <string name="send_code">Enter</string>
    <string name="prompt_password">Password</string>
    <string name="send_password">Enter</string>


    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_users">Online activity</string>
    <string name="action_chats">Lost and Found</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="users_list_placeholder_text">Users will appear here order by recent
        online activity. It will take some time.</string>
    <string name="chats_list_placeholder_text">Here comes list of chats filled with removed
    and edited messages collected by Undegram</string>
    <string name="messages_list_placeholder_text">No edited or deleted messages recorded</string>
    <string name="login_demo_button">Take a look</string>
    <string name="recorded_time_online">Recorded time online</string>
    <string name="collecting_data">Collecting data...</string>
    <string name="avatar_transition">avatar_transition</string>
    <string name="view_transition">view_transition</string>
    <string name="chat_total_stub">Some info about chat</string>

    <string name="edits_shown">show edits</string>
    <string name="edits_hidden">hide edits</string>

</resources>
